# persistent-agent-memory

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
skills/extras/atlas-update/: skill.md
skills/memory-bootstrap/: skill.md
skills/session-handoff/: skill.md
src/persistent_agent_memory/: __init__.py  config.py  indexer.py  models.py  server.py  service.py
src/persistent_agent_memory/embeddings/: __init__.py  api_provider.py  base.py  local_provider.py
src/persistent_agent_memory/storage/: __init__.py  base.py  postgres_store.py  sqlite_store.py
tests/: conftest.py  test_api_provider.py  test_config.py  test_indexer.py  test_local_provider.py  test_models.py  test_postgres_store.py  test_server.py  test_service.py  test_sqlite_store.py
