[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persistent-agent-memory"
version = "0.1.0"
description = "MCP server for persistent agent memory across sessions"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Andreas", email = "andreas@cytrex.dev" },
    { name = "Cypher", email = "cypher@cytrex.dev" },
]
keywords = ["mcp", "memory", "agent", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "sqlite-vec>=0.1.6",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30", "pgvector>=0.3"]
local = ["sentence-transformers>=3.0", "torch>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[project.scripts]
pam = "persistent_agent_memory.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
